--- a/tambah.html
+++ b/tambah.html
@@ -1,216 +1,121 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mode Guru - Tambah Kosakata</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8fafc;
-      margin: 0;
-      padding: 20px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    h1 {
-      text-align: center;
-      color: #2c3e50;
-    }
-    label {
-      display: block;
-      margin-top: 20px;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-    input, select {
-      width: 100%;
-      padding: 10px;
-      font-size: 1em;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    #previewEmotikon {
-      font-size: 3em;
-      margin-top: 10px;
-      text-align: center;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1em;
-      background-color: #3498db;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-    #listKosakata {
-      margin-top: 30px;
-    }
-    #listKosakata h2 {
-      text-align: center;
-      color: #2c3e50;
-    }
-    #listKosakata ul {
-      list-style: none;
-      padding: 0;
-    }
-    #listKosakata li {
-      background: #e2e8f0;
-      margin-bottom: 8px;
-      padding: 8px 12px;
-      border-radius: 6px;
-      font-size: 1.2em;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    #listKosakata li span.emotikon {
-      margin-right: 10px;
-    }
-    #listKosakata li button {
-      background-color: #e74c3c;
-      border: none;
-      color: white;
-      border-radius: 6px;
-      padding: 4px 8px;
-      cursor: pointer;
-    }
-    #listKosakata li button:hover {
-      background-color: #c0392b;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Mode Guru - Tambah Kosakata Simple</title>
+<style>
+  body { font-family: Arial; max-width: 600px; margin: auto; padding: 20px; }
+  label, select, input, button { display: block; width: 100%; margin-top: 10px; font-size: 1.1em; }
+  #previewEmotikon { font-size: 3em; text-align: center; margin-top: 10px; }
+  ul { padding-left: 0; list-style: none; }
+  li { background: #eee; margin: 8px 0; padding: 8px; border-radius: 6px; display: flex; justify-content: space-between; }
+  button.del { background: #e74c3c; border: none; color: white; border-radius: 4px; cursor: pointer; }
+</style>
 </head>
 <body>
-  <h1>Mode Guru: Tambah Kosakata</h1>
-  <form id="formTambah" onsubmit="simpanKosakata(event)">
-    <label for="kategori">Kategori:</label>
-    <select id="kategori" required>
-      <option value="">-- Pilih Kategori --</option>
-      <option value="emosi">Emosi & Perasaan</option>
-      <option value="kebutuhan">Kebutuhan Harian</option>
-      <option value="makanan">Makanan & Minuman</option>
-      <option value="salam">Salam & Sosial</option>
-      <option value="tempat">Tempat</option>
-      <option value="lokasi_rumah">Di Rumah</option>
-      <option value="lokasi_sekolah">Di Sekolah</option>
-      <option value="lingkungan">Di Lingkungan</option>
-      <option value="tempatumum">Di Tempat Umum</option>
-      <option value="subjek">Subjek & Orang</option>
-    </select>
 
-    <label for="teks">Teks/Kalimat:</label>
-    <input type="text" id="teks" placeholder="Contoh: Saya senang" required />
+<h1>Mode Guru - Tambah Kosakata</h1>
 
-    <label for="emotikon">Emotikon (gunakan emoji):</label>
-    <input type="text" id="emotikon" placeholder="Contoh: 😃" maxlength="2" required />
-    <div id="previewEmotikon"></div>
+<form id="formTambah" onsubmit="simpanKosakata(event)">
+  <label for="kategori">Kategori:</label>
+  <select id="kategori" required>
+    <option value="">-- Pilih Kategori --</option>
+    <option value="emosi">Emosi & Perasaan</option>
+    <option value="kebutuhan">Kebutuhan Harian</option>
+    <option value="makanan">Makanan & Minuman</option>
+    <option value="salam">Salam & Sosial</option>
+  </select>
 
-    <button type="submit">Simpan Kosakata</button>
-  </form>
+  <label for="teks">Teks/Kalimat:</label>
+  <input type="text" id="teks" placeholder="Contoh: Saya senang" required />
 
-  <div id="listKosakata">
-    <h2>Daftar Kosakata</h2>
-    <ul id="daftar"></ul>
-  </div>
+  <label for="emotikon">Emotikon (emoji):</label>
+  <input type="text" id="emotikon" maxlength="2" required />
+  <div id="previewEmotikon"></div>
 
-  <script>
-    // Preview emotikon saat ketik
-    const inputEmotikon = document.getElementById('emotikon');
-    const preview = document.getElementById('previewEmotikon');
-    inputEmotikon.addEventListener('input', () => {
-      preview.textContent = inputEmotikon.value;
+  <button type="submit">Simpan Kosakata</button>
+</form>
+
+<h2>Daftar Kosakata</h2>
+<ul id="daftar"></ul>
+
+<script>
+  const inputEmotikon = document.getElementById('emotikon');
+  const preview = document.getElementById('previewEmotikon');
+  const kategoriSelect = document.getElementById('kategori');
+  const daftar = document.getElementById('daftar');
+
+  inputEmotikon.addEventListener('input', () => {
+    preview.textContent = inputEmotikon.value;
+  });
+
+  kategoriSelect.addEventListener('change', () => {
+    tampilkanKosakata(kategoriSelect.value);
+  });
+
+  function simpanKosakata(e) {
+    e.preventDefault();
+    const kategori = kategoriSelect.value;
+    const teks = document.getElementById('teks').value.trim();
+    const emoji = inputEmotikon.value.trim();
+
+    if (!kategori) return alert('Pilih kategori terlebih dahulu!');
+    if (!teks) return alert('Teks tidak boleh kosong!');
+    if (!emoji) return alert('Masukkan emotikon!');
+
+    const key = 'kosakata_' + kategori;
+    let arr = JSON.parse(localStorage.getItem(key)) || [];
+
+    if(arr.some(k => k.teks.toLowerCase() === teks.toLowerCase())) {
+      return alert('Teks sudah ada di kategori ini!');
+    }
+
+    arr.push({ teks, emoji });
+    localStorage.setItem(key, JSON.stringify(arr));
+    alert('Berhasil disimpan!');
+
+    document.getElementById('formTambah').reset();
+    preview.textContent = '';
+
+    tampilkanKosakata(kategori);
+  }
+
+  function tampilkanKosakata(kategori) {
+    daftar.innerHTML = '';
+    if (!kategori) {
+      daftar.innerHTML = '<li>Pilih kategori untuk melihat kosakata.</li>';
+      return;
+    }
+    const key = 'kosakata_' + kategori;
+    let arr = JSON.parse(localStorage.getItem(key)) || [];
+
+    if(arr.length === 0) {
+      daftar.innerHTML = '<li>Belum ada kosakata.</li>';
+      return;
+    }
+
+    arr.forEach((item, index) => {
+      const li = document.createElement('li');
+      li.innerHTML = `<span>${item.emoji} ${item.teks}</span> 
+                      <button class="del" onclick="hapusKosakata('${kategori}', ${index})">Hapus</button>`;
+      daftar.appendChild(li);
     });
+  }
 
-    // Simpan kosakata ke localStorage
-    function simpanKosakata(e) {
-      e.preventDefault();
+  function hapusKosakata(kategori, index) {
+    const key = 'kosakata_' + kategori;
+    let arr = JSON.parse(localStorage.getItem(key)) || [];
+    arr.splice(index, 1);
+    localStorage.setItem(key, JSON.stringify(arr));
+    tampilkanKosakata(kategori);
+  }
 
-      const kategori = document.getElementById('kategori').value;
-      const teks = document.getElementById('teks').value.trim();
-      const emotikon = document.getElementById('emotikon').value.trim();
+  // Load awal
+  window.onload = () => {
+    tampilkanKosakata(kategoriSelect.value);
+  };
+</script>
 
-      if (!kategori) {
-        alert('Pilih kategori terlebih dahulu.');
-        return;
-      }
-      if (!teks) {
-        alert('Teks tidak boleh kosong.');
-        return;
-      }
-      if (!emotikon) {
-        alert('Masukkan emotikon (emoji).');
-        return;
-      }
-
-      // Ambil data lama dari localStorage
-      const key = 'kosakata_' + kategori;
-      let arr = JSON.parse(localStorage.getItem(key)) || [];
-
-      // Cek duplikat teks di kategori
-      if(arr.some(item => item.teks.toLowerCase() === teks.toLowerCase())) {
-        alert('Teks ini sudah ada di kategori tersebut.');
-        return;
-      }
-
-      // Tambahkan data baru
-      arr.push({ teks, emoji: emotikon });
-
-      // Simpan ulang ke localStorage
-      localStorage.setItem(key, JSON.stringify(arr));
-
-      alert('Kosakata baru berhasil disimpan!');
-
-      // Reset form dan preview
-      document.getElementById('formTambah').reset();
-      preview.textContent = '';
-
-      // Tampilkan ulang daftar kosakata kategori yang dipilih
-      tampilkanKosakata(kategori);
-    }
-
-    // Tampilkan kosakata yang disimpan per kategori
-    function tampilkanKosakata(kategori) {
-      const key = 'kosakata_' + kategori;
-      const arr = JSON.parse(localStorage.getItem(key)) || [];
-      const daftar = document.getElementById('daftar');
-      daftar.innerHTML = '';
-
-      if(arr.length === 0) {
-        daftar.innerHTML = '<li><i>Belum ada kosakata di kategori ini.</i></li>';
-        return;
-      }
-
-      arr.forEach((item, index) => {
-        const li = document.createElement('li');
-        li.innerHTML = `<span class="emotikon">${item.emoji}</span> ${item.teks} <button onclick="hapusKosakata('${kategori}', ${index})">Hapus</button>`;
-        daftar.appendChild(li);
-      });
-    }
-
-    // Hapus kosakata dari localStorage dan update list
-    function hapusKosakata(kategori, index) {
-      const key = 'kosakata_' + kategori;
-      let arr = JSON.parse(localStorage.getItem(key)) || [];
-      arr.splice(index, 1);
-      localStorage.setItem(key, JSON.stringify(arr));
-      tampilkanKosakata(kategori);
-    }
-
-    // Jika pilih kategori baru, tampilkan daftar kosakata kategori tersebut
-    document.getElementById('kategori').addEventListener('change', (e) => {
-      tampilkanKosakata(e.target.value);
-    });
-
-    // Saat halaman load, kosongkan daftar
-    window.onload = () => {
-      document.getElementById('daftar').innerHTML = '<li><i>Pilih kategori untuk lihat kosakata.</i></li>';
-    };
-  </script>
 </body>
 </html>
